unreal-plugin/ThirdParty/AliceSDF/include/alice_sdf.h

/* ============================================================================
 * Types
 * ============================================================================ */

/**
 * @brief Opaque handle to an SDF node
 *
 * All SDF operations return handles that must be freed with alice_sdf_free().
 */
typedef void* SdfHandle;
/* 2D/Extruded */
SdfHandle alice_sdf_triangle(float ax, float ay, float az, float bx, float by, float bz, float cx, float cy, float cz);
SdfHandle alice_sdf_bezier(float ax, float ay, float az, float bx, float by, float bz, float cx, float cy, float cz, float radius);
SdfHandle alice_sdf_rhombus(float la, float lb, float half_height, float round_radius);
SdfHandle alice_sdf_horseshoe(float angle, float radius, float half_length, float width, float thickness);
SdfHandle alice_sdf_vesica(float radius, float half_dist);
SdfHandle alice_sdf_superellipsoid(float hx, float hy, float hz, float e1, float e2);
SdfHandle alice_sdf_rounded_x(float width, float round_radius, float half_height);
SdfHandle alice_sdf_pie(float angle, float radius, float half_height);
SdfHandle alice_sdf_trapezoid(float r1, float r2, float trap_height, float half_depth);
SdfHandle alice_sdf_parallelogram(float width, float para_height, float skew, float half_depth);
SdfHandle alice_sdf_tunnel(float width, float height_2d, float half_depth);
SdfHandle alice_sdf_uneven_capsule(float r1, float r2, float cap_height, float half_depth);
SdfHandle alice_sdf_arc_shape(float aperture, float radius, float thickness, float half_height);
SdfHandle alice_sdf_moon(float d, float ra, float rb, float half_height);
SdfHandle alice_sdf_cross_shape(float length, float thickness, float round_radius, float half_height);
SdfHandle alice_sdf_blobby_cross(float size, float half_height);
SdfHandle alice_sdf_parabola_segment(float width, float para_height, float half_depth);
SdfHandle alice_sdf_regular_polygon(float radius, float n_sides, float half_height);
SdfHandle alice_sdf_star_polygon(float radius, float n_points, float m, float half_height);
SdfHandle alice_sdf_infinite_cylinder(float radius);
SdfHandle alice_sdf_infinite_cone(float angle);
/* Platonic & Archimedean */
SdfHandle alice_sdf_tetrahedron(float size);
SdfHandle alice_sdf_dodecahedron(float radius);
SdfHandle alice_sdf_icosahedron(float radius);
SdfHandle alice_sdf_truncated_octahedron(float radius);
SdfHandle alice_sdf_truncated_icosahedron(float radius);
/* TPMS */
SdfHandle alice_sdf_gyroid(float scale, float thickness);
SdfHandle alice_sdf_schwarz_p(float scale, float thickness);
SdfHandle alice_sdf_diamond_surface(float scale, float thickness);
SdfHandle alice_sdf_neovius(float scale, float thickness);
SdfHandle alice_sdf_lidinoid(float scale, float thickness);
SdfHandle alice_sdf_iwp(float scale, float thickness);
SdfHandle alice_sdf_frd(float scale, float thickness);
SdfHandle alice_sdf_fischer_koch_s(float scale, float thickness);
SdfHandle alice_sdf_pmy(float scale, float thickness);
/* Structural */
SdfHandle alice_sdf_box_frame(float hx, float hy, float hz, float edge);
SdfHandle alice_sdf_tube(float outer_radius, float thickness, float half_height);
SdfHandle alice_sdf_chamfered_cube(float hx, float hy, float hz, float chamfer);
SdfHandle alice_sdf_stairs(float step_width, float step_height, float num_steps, float half_depth);
SdfHandle alice_sdf_helix(float major_radius, float minor_radius, float pitch, float half_height);
/* 2D Primitives (extruded along Z) */
SdfHandle alice_sdf_circle_2d(float radius, float half_height);
SdfHandle alice_sdf_rect_2d(float half_w, float half_h, float half_height);
SdfHandle alice_sdf_segment_2d(float ax, float ay, float bx, float by, float thickness, float half_height);
SdfHandle alice_sdf_rounded_rect_2d(float half_w, float half_h, float round_radius, float half_height);
SdfHandle alice_sdf_annular_2d(float outer_radius, float thickness, float half_height);