unity-sdf-universe/Assets/Scripts/AliceSdf.cs


        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_triangle(float ax, float ay, float az, float bx, float by, float bz, float cx, float cy, float cz);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_bezier(float ax, float ay, float az, float bx, float by, float bz, float cx, float cy, float cz, float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rhombus(float la, float lb, float half_height, float round_radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_horseshoe(float angle, float radius, float half_length, float width, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_vesica(float radius, float half_dist);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_infinite_cylinder(float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_infinite_cone(float angle);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_superellipsoid(float hx, float hy, float hz, float e1, float e2);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rounded_x(float width, float round_radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_pie(float angle, float radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_trapezoid(float r1, float r2, float trap_height, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_parallelogram(float width, float para_height, float skew, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_tunnel(float width, float height_2d, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_uneven_capsule(float r1, float r2, float cap_height, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_arc_shape(float aperture, float radius, float thickness, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_moon(float d, float ra, float rb, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_cross_shape(float length, float thickness, float round_radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_blobby_cross(float size, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_parabola_segment(float width, float para_height, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_regular_polygon(float radius, float n_sides, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_star_polygon(float radius, float n_points, float m, float half_height);

        public static IntPtr Triangle(Vector3 a, Vector3 b, Vector3 c) => alice_sdf_triangle(a.x, a.y, a.z, b.x, b.y, b.z, c.x, c.y, c.z);
        public static IntPtr Bezier(Vector3 a, Vector3 b, Vector3 c, float radius) => alice_sdf_bezier(a.x, a.y, a.z, b.x, b.y, b.z, c.x, c.y, c.z, radius);
        public static IntPtr Rhombus(float la, float lb, float halfHeight, float roundRadius) => alice_sdf_rhombus(la, lb, halfHeight, roundRadius);
        public static IntPtr Horseshoe(float angle, float radius, float halfLength, float width, float thickness) => alice_sdf_horseshoe(angle, radius, halfLength, width, thickness);
        public static IntPtr Vesica(float radius, float halfDist) => alice_sdf_vesica(radius, halfDist);
        public static IntPtr InfiniteCylinder(float radius) => alice_sdf_infinite_cylinder(radius);
        public static IntPtr InfiniteCone(float angle) => alice_sdf_infinite_cone(angle);
        public static IntPtr Superellipsoid(Vector3 halfExtents, float e1, float e2) => alice_sdf_superellipsoid(halfExtents.x, halfExtents.y, halfExtents.z, e1, e2);
        public static IntPtr RoundedX(float width, float roundRadius, float halfHeight) => alice_sdf_rounded_x(width, roundRadius, halfHeight);
        public static IntPtr Pie(float angle, float radius, float halfHeight) => alice_sdf_pie(angle, radius, halfHeight);
        public static IntPtr Trapezoid(float r1, float r2, float trapHeight, float halfDepth) => alice_sdf_trapezoid(r1, r2, trapHeight, halfDepth);
        public static IntPtr Parallelogram(float width, float paraHeight, float skew, float halfDepth) => alice_sdf_parallelogram(width, paraHeight, skew, halfDepth);
        public static IntPtr Tunnel(float width, float height2D, float halfDepth) => alice_sdf_tunnel(width, height2D, halfDepth);
        public static IntPtr UnevenCapsule(float r1, float r2, float capHeight, float halfDepth) => alice_sdf_uneven_capsule(r1, r2, capHeight, halfDepth);
        public static IntPtr ArcShape(float aperture, float radius, float thickness, float halfHeight) => alice_sdf_arc_shape(aperture, radius, thickness, halfHeight);
        public static IntPtr Moon(float d, float ra, float rb, float halfHeight) => alice_sdf_moon(d, ra, rb, halfHeight);
        public static IntPtr CrossShape(float length, float thickness, float roundRadius, float halfHeight) => alice_sdf_cross_shape(length, thickness, roundRadius, halfHeight);
        public static IntPtr BlobbyCross(float size, float halfHeight) => alice_sdf_blobby_cross(size, halfHeight);
        public static IntPtr ParabolaSegment(float width, float paraHeight, float halfDepth) => alice_sdf_parabola_segment(width, paraHeight, halfDepth);
        public static IntPtr RegularPolygon(float radius, float nSides, float halfHeight) => alice_sdf_regular_polygon(radius, nSides, halfHeight);
        public static IntPtr StarPolygon(float radius, float nPoints, float m, float halfHeight) => alice_sdf_star_polygon(radius, nPoints, m, halfHeight);

        // --- 2D/Extruded Primitives ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_circle_2d(float radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rect_2d(float half_w, float half_h, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_segment_2d(float ax, float ay, float bx, float by, float thickness, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rounded_rect_2d(float half_w, float half_h, float round_radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_annular_2d(float outer_radius, float thickness, float half_height);

        public static IntPtr Circle2D(float radius, float halfHeight) => alice_sdf_circle_2d(radius, halfHeight);
        public static IntPtr Rect2D(float halfW, float halfH, float halfHeight) => alice_sdf_rect_2d(halfW, halfH, halfHeight);
        public static IntPtr Segment2D(Vector2 a, Vector2 b, float thickness, float halfHeight) => alice_sdf_segment_2d(a.x, a.y, b.x, b.y, thickness, halfHeight);
        public static IntPtr RoundedRect2D(float halfW, float halfH, float roundRadius, float halfHeight) => alice_sdf_rounded_rect_2d(halfW, halfH, roundRadius, halfHeight);
        public static IntPtr Annular2D(float outerRadius, float thickness, float halfHeight) => alice_sdf_annular_2d(outerRadius, thickness, halfHeight);

        // --- Platonic & Archimedean ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_tetrahedron(float size);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_dodecahedron(float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_icosahedron(float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_truncated_octahedron(float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_truncated_icosahedron(float radius);

        public static IntPtr Tetrahedron(float size) => alice_sdf_tetrahedron(size);
        public static IntPtr Dodecahedron(float radius) => alice_sdf_dodecahedron(radius);
        public static IntPtr Icosahedron(float radius) => alice_sdf_icosahedron(radius);
        public static IntPtr TruncatedOctahedron(float radius) => alice_sdf_truncated_octahedron(radius);
        public static IntPtr TruncatedIcosahedron(float radius) => alice_sdf_truncated_icosahedron(radius);

        // --- TPMS ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_gyroid(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_schwarz_p(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_diamond_surface(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_neovius(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_lidinoid(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_iwp(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_frd(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_fischer_koch_s(float scale, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_pmy(float scale, float thickness);

        public static IntPtr Gyroid(float scale, float thickness) => alice_sdf_gyroid(scale, thickness);
        public static IntPtr SchwarzP(float scale, float thickness) => alice_sdf_schwarz_p(scale, thickness);
        public static IntPtr DiamondSurface(float scale, float thickness) => alice_sdf_diamond_surface(scale, thickness);
        public static IntPtr Neovius(float scale, float thickness) => alice_sdf_neovius(scale, thickness);
        public static IntPtr Lidinoid(float scale, float thickness) => alice_sdf_lidinoid(scale, thickness);
        public static IntPtr IWP(float scale, float thickness) => alice_sdf_iwp(scale, thickness);
        public static IntPtr FRD(float scale, float thickness) => alice_sdf_frd(scale, thickness);
        public static IntPtr FischerKochS(float scale, float thickness) => alice_sdf_fischer_koch_s(scale, thickness);
        public static IntPtr PMY(float scale, float thickness) => alice_sdf_pmy(scale, thickness);

        // --- Structural ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_box_frame(float hx, float hy, float hz, float edge);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_tube(float outer_radius, float thickness, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_chamfered_cube(float hx, float hy, float hz, float chamfer);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_stairs(float step_width, float step_height, float num_steps, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_helix(float major_radius, float minor_radius, float pitch, float half_height);

        public static IntPtr BoxFrame(Vector3 halfExtents, float edge) => alice_sdf_box_frame(halfExtents.x, halfExtents.y, halfExtents.z, edge);
        public static IntPtr Tube(float outerRadius, float thickness, float halfHeight) => alice_sdf_tube(outerRadius, thickness, halfHeight);
        public static IntPtr ChamferedCube(Vector3 halfExtents, float chamfer) => alice_sdf_chamfered_cube(halfExtents.x, halfExtents.y, halfExtents.z, chamfer);
        public static IntPtr Stairs(float stepWidth, float stepHeight, float numSteps, float halfDepth) => alice_sdf_stairs(stepWidth, stepHeight, numSteps, halfDepth);
        public static IntPtr Helix(float majorRadius, float minorRadius, float pitch, float halfHeight) => alice_sdf_helix(majorRadius, minorRadius, pitch, halfHeight);
